Horarios con restricciones especiales

--- a/Preasignacion/preasignacion.ipynb
+++ b/Preasignacion/preasignacion.ipynb
@@ -52,9 +52,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2023-06-17\n"
+     ]
+    }
+   ],
    "source": [
     "model = gp.Model(\"Preasignación de cursos a profesores\")\n",
     "\n",
@@ -257,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +312,7 @@
       "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (win64)\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "Optimize a model with 191 rows, 224 columns and 569 nonzeros\n",
-      "Model fingerprint: 0x1e7e30f0\n",
+      "Model fingerprint: 0x2e3d7939\n",
       "Variable types: 0 continuous, 224 integer (224 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 7e+00]\n",
@@ -312,7 +321,7 @@
       "  RHS range        [1e+00, 3e+01]\n",
       "Found heuristic solution: objective 7700.0000000\n",
       "Presolve removed 181 rows and 208 columns\n",
-      "Presolve time: 0.00s\n",
+      "Presolve time: 0.01s\n",
       "Presolved: 10 rows, 16 columns, 32 nonzeros\n",
       "Found heuristic solution: objective 1300.0000000\n",
       "Variable types: 0 continuous, 16 integer (16 binary)\n",
@@ -324,7 +333,7 @@
       "\n",
       "     0     0     cutoff    0      1300.00000 1300.00000  0.00%     -    0s\n",
       "\n",
-      "Explored 1 nodes (2 simplex iterations) in 0.01 seconds (0.00 work units)\n",
+      "Explored 1 nodes (2 simplex iterations) in 0.02 seconds (0.00 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
       "Solution count 2: 1300 7700 \n",
@@ -357,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,8 +437,8 @@
     "\n",
     "preferencias_profesores = {\n",
     "    \"Messi\": [\n",
-    "            ('Matemáticas', '8A'),\n",
-    "            ('Matemáticas', 'IVA')\n",
+    "        ('Matemáticas', '8A'),\n",
+    "        ('Matemáticas', 'IVA')\n",
     "    ],\n",
     "    'Mbappé': [\n",
     "        ('Lenguaje', 'IVA'),\n",
@@ -461,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,34 +479,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model2.addConstrs((sum(z[p,r,c] * cantidad_de_horas_por_ramo_por_curso[c][r] for r in ramos for c in cursos) <= disponibilidad_horaria[p] for p in profesores),name=\"R2\");"
+    "model2.addConstrs((sum(z[p,r,c] * cantidad_de_horas_por_ramo_por_curso[c][r] for r in ramos for c in cursos) \\\n",
+    "    <= disponibilidad_horaria[p] for p in profesores),name=\"R2\");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model2.addConstr((sum(z['Placeholder',r,c] * cantidad_de_horas_por_ramo_por_curso[c][r] for r in ramos for c in cursos) <= horas_placeholder),name=\"R3\");"
+    "model2.addConstr((sum(z['PLACEHOLDER',r,c] * cantidad_de_horas_por_ramo_por_curso[c][r] for r in ramos for c in cursos) \\\n",
+    "    <= horas_placeholder),name=\"R3\");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model2.addConstrs((z[p,r,c] == 0 for p in profesores for r,c in list(set([(a,b) for a in ramos for b in cursos]) - set(ramos_y_cursos_dictados_por_profesor[p]))),name=\"R4\");"
+    "model2.addConstrs((z[p,r,c] == 0 for p in profesores \n",
+    "for r,c in list(set([(a,b) for a in ramos for b in cursos]) - set(ramos_y_cursos_dictados_por_profesor[p]))),name=\"R4\");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,32 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Messi': [('Matemáticas', '8A'), ('Matemáticas', 'IVA')],\n",
-       " 'Mbappé': [('Lenguaje', 'IVA'), ('Lenguaje', 'IVB')],\n",
-       " 'Ronaldo': [('Historia', '8A'), ('Historia', '8B')],\n",
-       " 'Modric': [('Alemán', '4A'), ('Alemán', '4B')],\n",
-       " 'Perking': [('Alemán', '4B'), ('Alemán', '5A')],\n",
-       " 'Hakimi': [('Matemáticas', '4B'), ('Matemáticas', '5B')]}"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "preferencias_profesores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -541,25 +528,30 @@
       "Gurobi Optimizer version 9.5.1 build v9.5.1rc2 (win64)\n",
       "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
       "Optimize a model with 192 rows, 224 columns and 601 nonzeros\n",
-      "Model fingerprint: 0xbeb8587b\n",
+      "Model fingerprint: 0xfbfa8b46\n",
       "Variable types: 0 continuous, 224 integer (224 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 7e+00]\n",
       "  Objective range  [1e+00, 1e+00]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 4e+01]\n",
-      "\n",
-      "Loaded MIP start from previous solve with objective 11\n",
-      "\n",
-      "Presolve removed 183 rows and 205 columns\n",
+      "Presolve removed 180 rows and 197 columns\n",
       "Presolve time: 0.00s\n",
-      "Presolved: 9 rows, 19 columns, 38 nonzeros\n",
-      "Variable types: 0 continuous, 19 integer (16 binary)\n",
+      "Presolved: 12 rows, 27 columns, 54 nonzeros\n",
+      "Variable types: 0 continuous, 27 integer (24 binary)\n",
+      "Found heuristic solution: objective 9.0000000\n",
       "\n",
-      "Explored 0 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
+      "Root relaxation: objective 1.100000e+01, 9 iterations, 0.00 seconds (0.00 work units)\n",
+      "\n",
+      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
+      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
+      "\n",
+      "*    0     0               0      11.0000000   11.00000  0.00%     -    0s\n",
+      "\n",
+      "Explored 1 nodes (9 simplex iterations) in 0.01 seconds (0.00 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
-      "Solution count 1: 11 \n",
+      "Solution count 2: 11 9 \n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
       "Best objective 1.100000000000e+01, best bound 1.100000000000e+01, gap 0.0000%\n"
@@ -577,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +603,96 @@
     "for elem in ocupaciones_profesores:\n",
     "    if elem[0] != 'Placeholder':\n",
     "        if (elem[1], elem[2]) in preferencias_profesores[elem[0]]:\n",
-    "            print(elem)"
+    "            print(elem)\n",
+    "    # if elem[0] == 'Placeholder':\n",
+    "    #     print(elem)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'4A': {1: [('Modric', 'Alemán'),\n",
+       "   ('Ronaldo', 'Historia'),\n",
+       "   ('Mbappé', 'Lenguaje'),\n",
+       "   ('Messi', 'Matemáticas')]},\n",
+       " '4B': {1: [('Perking', 'Alemán'),\n",
+       "   ('Ronaldo', 'Historia'),\n",
+       "   ('Mbappé', 'Lenguaje'),\n",
+       "   ('Hakimi', 'Matemáticas')]},\n",
+       " '5A': {1: [('Perking', 'Alemán'),\n",
+       "   ('Ronaldo', 'Historia'),\n",
+       "   ('Placeholder', 'Lenguaje'),\n",
+       "   ('Messi', 'Matemáticas')]},\n",
+       " '5B': {1: [('Modric', 'Alemán'),\n",
+       "   ('Ronaldo', 'Historia'),\n",
+       "   ('Placeholder', 'Lenguaje'),\n",
+       "   ('Hakimi', 'Matemáticas')]},\n",
+       " '8A': {1: [('Modric', 'Alemán'),\n",
+       "   ('Ronaldo', 'Historia'),\n",
+       "   ('Placeholder', 'Lenguaje'),\n",
+       "   ('Messi', 'Matemáticas')]},\n",
+       " '8B': {1: [('Perking', 'Alemán'),\n",
+       "   ('Ronaldo', 'Historia'),\n",
+       "   ('Placeholder', 'Lenguaje'),\n",
+       "   ('Hakimi', 'Matemáticas')]},\n",
+       " 'IVA': {1: [('Modric', 'Alemán'),\n",
+       "   ('Ronaldo', 'Historia'),\n",
+       "   ('Mbappé', 'Lenguaje'),\n",
+       "   ('Messi', 'Matemáticas')]},\n",
+       " 'IVB': {1: [('Placeholder', 'Alemán'),\n",
+       "   ('Ronaldo', 'Historia'),\n",
+       "   ('Mbappé', 'Lenguaje'),\n",
+       "   ('Hakimi', 'Matemáticas')]}}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ocupaciones_profesores = sorted(ocupaciones_profesores, key= lambda x: x[1])\n",
+    "ocupaciones_profesores = sorted(ocupaciones_profesores, key= lambda x: x[2])\n",
+    "\n",
+    "ultimo_ramo = None\n",
+    "ultimo_curso = None\n",
+    "indices = []\n",
+    "for i in range(len(ocupaciones_profesores)):\n",
+    "    if ocupaciones_profesores[i][1] == ultimo_ramo:\n",
+    "        if ocupaciones_profesores[i][2] == ultimo_curso:\n",
+    "            indices.append(i)\n",
+    "    ultimo_ramo = ocupaciones_profesores[i][1]\n",
+    "    ultimo_curso = ocupaciones_profesores[i][2]\n",
+    "indices.reverse()\n",
+    "\n",
+    "curso_actual = None\n",
+    "profesores_por_curso = {}\n",
+    "for i in range(len(ocupaciones_profesores)):\n",
+    "    if ocupaciones_profesores[i][2] != curso_actual:\n",
+    "        profesores_por_curso[ocupaciones_profesores[i][2]] = {}\n",
+    "        if type(ocupaciones_profesores[i][0]) == str:\n",
+    "            profesores_por_curso[ocupaciones_profesores[i][2]][1] = [(ocupaciones_profesores[i][0], ocupaciones_profesores[i][1])]\n",
+    "        else:\n",
+    "            profesores_por_curso[ocupaciones_profesores[i][2]][len(ocupaciones_profesores[i][0])] = [(ocupaciones_profesores[i][0], ocupaciones_profesores[i][1])]\n",
+    "    else:\n",
+    "        if type(ocupaciones_profesores[i][0]) == str:\n",
+    "            if 1 not in profesores_por_curso[ocupaciones_profesores[i][2]]:\n",
+    "                profesores_por_curso[ocupaciones_profesores[i][2]][1] = [(ocupaciones_profesores[i][0], ocupaciones_profesores[i][1])]\n",
+    "            else:\n",
+    "                profesores_por_curso[ocupaciones_profesores[i][2]][1].append((ocupaciones_profesores[i][0], ocupaciones_profesores[i][1]))\n",
+    "        else:\n",
+    "            if len(ocupaciones_profesores[i][0]) not in profesores_por_curso[ocupaciones_profesores[i][2]]:\n",
+    "                profesores_por_curso[ocupaciones_profesores[i][2]][len(ocupaciones_profesores[i][0])] = [(ocupaciones_profesores[i][0], ocupaciones_profesores[i][1])]\n",
+    "            else:\n",
+    "                profesores_por_curso[ocupaciones_profesores[i][2]][len(ocupaciones_profesores[i][0])].append((ocupaciones_profesores[i][0], ocupaciones_profesores[i][1]))\n",
+    "    curso_actual = ocupaciones_profesores[i][2]\n",
+    "\n",
+    "profesores_por_curso"
    ]
   }
  ],
