--- a/Explicación modelo optimización.tex
+++ b/Explicación modelo optimización.tex
@@ -38,7 +38,7 @@
 \vspace*{4mm}
 \hrule\vspace*{1pt}\hrule
 \vspace*{4mm}
-{\LARGE\bf Generador de horarios para colegios\\
+{\LARGE\bf Generador de horarios para colegios\\}
 \vspace*{4mm}
 \vspace*{1mm}
 \end{center}
@@ -61,7 +61,7 @@ El proyecto tiene como propósito modelar el problema de generación de horarios
     \item $dias$ \textbf{(D)}: Lista que muestra los días en los cuales se quieren planificar clases en un colegio. Generalmente será de lunes a viernes.
     \item $modulos$ \textbf{(M)}: Lista que contiene todos los módulos de clases con los que cuenta el colegio.
     \item $modulos\_consecutivos$ \textbf{(MC)}: Lista que contiene listas de la forma $[i,j]$ que señala que entre el ramo $i$ y el ramo $j$ no hay ninguna pausa (recreo o almuerzo).
-    \item $horarios\,[curso]\,[día]$ \textbf{(H)}: Para cada día de cada curso muestra los módulos de clases que tiene cada curso en cada día de la semana.
+    \item $horarios\,[curso]\,[dia]$ \textbf{(H)}: Para cada día de cada curso muestra los módulos de clases que tiene cada curso en cada día de la semana.
     \item $limitaciones\_profesores\,[profesor] \textbf{(LP)}$: Para cada profesor entrega el máximo de módulos de clases que puede hacer en una semana como también el máximo de módulos que puede hacer en un día.
     \item $carga\_profesores\,[profesor]$ \textbf{(CP)}: Para cada profesor entrega, en una lista, el/los curso/s a los que se le hace una clase y el nombre del ramo.
     \item $profesores\_por\_curso\,[curso]$ \textbf{(PpC)}: Para cada curso se tiene una lista con la lista de los profesores que hacen un ramo y el nombre del ramo.
